--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.1.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1"
   },
